--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,906 +1,11 @@
-@font-face {
-    font-family: 'Porsche Next TT';
-    src: url('../polices/porsche-next.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Porsche Next TT';
-    src: url('../polices/porsche-next-bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Anton';
-    src: url('../polices/Anton-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-
-
-:root {
-    --font-porsche: 'Porsche Next TT', sans-serif;
-    --font-anton: 'Anton', sans-serif;
-
-    --typography-h1: 400 61px/1.5 var(--font-porsche);
-    --typography-h1-mobile: 400 30px/1.5 var(--font-porsche);
-    --typography-h2: 700 49px/1.5 var(--font-porsche);
-    --typography-h2-mobile: 700 24px/1.5 var(--font-porsche);
-    --typography-h3: 700 39px/1.5 var(--font-porsche);
-    --typography-brand-name: 400 64px/1 var(--font-anton);
-    --typography-brand-name-desktop: 400 128px/1 var(--font-anton);
-    --typography-second-brand-name: 400 36px/1 var(--font-anton);
-    --typography-second-brand-name-desktop: 400 96px/1 var(--font-anton);
-    --typography-subtitle: 400 20px/1.5 var(--font-porsche);
-    --typography-body: 400 16px/1.5 var(--font-porsche);
-    --typography-body-bold: 700 16px/1.5 var(--font-porsche);
-    --typography-body-s: 400 14px/1.5 var(--font-porsche);
-    --typography-body-xs: 400 12px/1.5 var(--font-porsche);
-
-
-    --Background-primary: #FFFFFF;
-    --Background-secondary: #0E0E12;
-    --Text-illustration-header: #D8D8DB;
-    --text-primary: #010205;
-    --text-secondary: #6B6D70;
-    --text-inverse: #FBFCFF;
-    --Card-fill: #EEEFF2;
-    --Card-stroke: #D8D8DB;
-    --hover-black-bg: #18181E;
-
-    --gradiant-card: linear-gradient(to top, rgba(0, 0, 0, 0.8) 25%, rgba(0, 0, 0, 0) 80%);
-    --gradiant-radial-card: radial-gradient(closest-side at 50% 35%, rgba(14, 14, 18, 0.7), rgb(14, 14, 18));
-    --gradiant-full-size-img: linear-gradient(to top, rgba(14, 14, 18, 1) 20%, rgba(14, 14, 18, 0));
-    --gradiant-cover-size-img: linear-gradient(to bottom, rgba(14, 14, 18, 1) 20%, rgba(14, 14, 18, 0));
-    --gradiant-header: linear-gradient(to bottom, rgba(216, 216, 219, 0), rgba(216, 216, 219, 1) 80%, rgba(216, 216, 219, 0) 80%);
-    --gradiant-net-transition-bg: linear-gradient(to bottom, rgba(14, 14, 18, 1) 70%, rgba(14, 14, 18, 0) 70%, rgba(255, 255, 255, 1) 70%);
-
-    --space-centred: clamp(24px, 6.4vw, 160px);
-    --space-centred-second: clamp(0px, 6.771vw, 130px);
-
-    --space-xl: clamp(96px, 25.6vw, 160px);
-    --space-l: clamp(32px, 8.532vw, 64px);
-    --space-m: clamp(24px, 6.4vw, 32px);
-    --space-s: clamp(16px, 4.267vw, 24px);
-    --space-xs: clamp(0, .832vw, 16px);
-
-    --space-button-padding-top: 12px;
-    --space-brand-name: 24px;
-
-    --card-radius: 16px;
-    --button-radius: 4px;
-
-    --button-min-height: 48px;
-    --button-border-size: 2px;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
-}
-
-body {
-    background-color: var(--Background-primary);
-    color: var(--text-primary);
-    font: var(--typography-body);
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-}
-
-.full-size-img, .cover-size-img {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.full-size-img img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-.full-size-img:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50%;
-    background: var(--gradiant-full-size-img);
-}
-
-.card img {
-    display: block;
-}
-
-a {
-    color: var(--text-primary);
-    text-decoration: none;
-}
-
-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-
-header nav {
-    align-self: flex-start;
-    width: 100%;
-    padding-left: var(--space-s);
-}
-
-/*todo*/
-/*425px max*/
-.nav-collections {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: var(--space-xs);
-    overflow-x: auto;
-}
-
-.nav-collections a {
-    white-space: nowrap;
-}
-
-.secondary-p, .small {
-    color: var(--text-secondary);
-}
-
-.small {
-    font: var(--typography-body-s);
-}
-
-
-.model {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: var(--space-xs);
-    text-align: center;
-}
-
-.spec-item {
-    display: flex;
-    flex-direction: column-reverse;
-}
-
-.spec-item dt {
-    color: var(--text-secondary);
-}
-
-
-#philosophy-main {
-    display: flex;
-    flex-direction: column;
-}
-
-.invert-flex-column {
-    display: flex;
-    flex-direction: column-reverse;
-    gap: var(--space-s);
-}
-
-#philosophy-p {
-    margin-top: var(--space-xs);
-    font: var(--typography-subtitle);
-    max-width: 600px;
-}
-
-.philosophy-main-image {
-    border-radius: var(--card-radius);
-    overflow: hidden;
-    width: 100%;
-    height: auto;
-}
-
-#philosophy-img-scroll-effect {
-    position: relative;
-    width: 100%;
-    aspect-ratio: 10/7;
-    overflow: hidden;
-}
-
-#philosophy-img-scroll-effect img:first-of-type {
-    width: 60%;
-    height: auto;
-    position: absolute;
-    max-width: 100vw;
-    overflow: hidden;
-    top: 24px;
-    border-radius: var(--card-radius);
-    left: 0;
-}
-
-#philosophy-img-scroll-effect img:nth-of-type(2) {
-    width: 45%;
-    aspect-ratio: 149/200;
-    object-fit: cover;
-    position: absolute;
-    max-width: 100vw;
-    overflow: hidden;
-    bottom: -48px;
-    border-radius: var(--card-radius);
-    right: 0;
-}
-
-#craft-content {
-    text-align: center;
-    color: var(--text-inverse);
-    background-color: var(--Background-secondary);
-}
-
-#craft-content p {
-    font: var(--typography-subtitle);
-    padding-bottom: var(--space-s);
-}
-
-#craft-content nav ul {
-    padding-bottom: var(--space-xs);
-    display: flex;
-    gap: var(--space-xs);
-}
-
-#craft-content a {
-    color: var(--text-inverse);
-}
-
-#craft-list {
-    background: var(--gradiant-net-transition-bg);
-}
-
-
-#features-heading {
-    text-align: center;
-}
-
-.features-list, .find-list {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-s);
-}
-
-.feature-card {
-    position: relative;
-    height: 480px;
-    max-height: 600px;
-    scroll-snap-align: center;
-}
-
-.feature-card img {
-    height: 100%;
-    max-width: calc(100vw - var(--space-s) * 2);
-    width: auto;
-    object-fit: cover;
-    border-radius: var(--card-radius);
-    display: block;
-}
-
-.feature-content {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: var(--space-xs);
-    background: var(--gradiant-card);
-    border-radius: var(--card-radius);
-}
-
-
-.find-card {
-    position: relative;
-    width: 100%;
-}
-
-.find-card img {
-    height: 100%;
-    min-height: 480px;
-    width: 100%;
-    object-fit: cover;
-    border-radius: var(--card-radius);
-}
-
-.find-content {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: var(--space-xs);
-    background: var(--gradiant-card);
-    border-radius: var(--card-radius);
-}
-
-
-#complications-content p {
-    max-width: 700px;
-}
-
-
-#movement-content {
-    text-align: center;
-}
-
-#movement-content p {
-    font: var(--typography-subtitle);
-    margin-bottom: var(--space-xs);
-}
-
-#related-content {
-    text-align: center;
-}
-
-#related-content p {
-    font: var(--typography-subtitle);
-    margin-bottom: var(--space-s);
-}
-
-#selector-cards h2 {
-    text-align: center;
-    margin-bottom: var(--space-s);
-}
-
-#comparison-cta {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-xs);
-    align-items: center;
-    text-align: center;
-    margin-top: var(--space-s);
-}
-
-#comparison-cta p {
-    font: var(--typography-subtitle);
-}
-
-.card-content {
-    color: var(--text-inverse);
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-xs);
-}
-
-
-/*todo*/
-/*button not 100% width*/
-
-.second-spacer-desktop {
-    width: 100%;
-}
-
-.button-primary {
-    color: var(--text-inverse);
-    background-color: var(--Background-secondary);
-    border: var(--button-border-size) solid var(--text-primary);
-}
-
-.button-secondary {
-    color: var(--text-primary);
-    background-color: transparent;
-    border: var(--button-border-size) solid var(--Background-secondary);
-}
-
-.button-inverse {
-    color: var(--text-inverse);
-    background-color: transparent;
-    border: var(--button-border-size) solid var(--text-inverse);
-}
-
-.button-primary-inverse, .button-primary-inverse-social {
-    color: var(--text-primary);
-    background-color: var(--Background-primary);
-    border: var(--button-border-size) solid var(--Background-secondary);
-}
-
-.button-primary-inverse-social {
-    width: 56px;
-}
-
-.icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-/*todo*/
-@media screen and (min-width: 1200px) {
-
-    .button {
-        width: fit-content;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: var(--space-button-padding-top);
-        min-height: var(--button-min-height);
-        border-radius: var(--button-radius);
-        text-decoration: none;
-        padding: var(--space-button-padding-top) var(--space-s);
-    }
-
-    .buttons-group {
-        display: flex;
-        justify-content: center;
-        gap: var(--space-xs);
-    }
-
-    .button + .button {
-        margin-top: 0 !important;
-    }
-
-    .spec-container {
-        flex-direction: row !important;
-        justify-content: space-between;
-    }
-}
-
-header {
-    margin-top: 72px;
-    margin-bottom: var(--space-xs);
-}
-
-#gradiant-header {
-    width: 16%;
-    min-width: 150px;
-    aspect-ratio: 320/449;
-    z-index: 1;
-}
-
-#gradiant-header:before {
-    content: "";
-    position: absolute;
-    top: 72px;
-    left: 0;
-    width: 100vw;
-    min-height: 220px;
-    aspect-ratio: 1920/449;
-    background: var(--gradiant-header);
-    z-index: -1;
-}
-
-#gradiant-header img {
-    margin-bottom: var(--space-xs);
-    width: 100%;
-    min-width: 150px;
-    aspect-ratio: 320/449;
-    object-fit: cover;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-xl);
-}
-
-
-.spacer {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-xl);
-}
-
-.spec-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: var(--space-m);
-    margin-bottom: var(--space-l);
-}
-
-.specs-list {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.specs img {
-    max-width: 650px;
-    height: auto;
-    object-fit: cover;
-}
-
-.philosophy .second-brand-name {
-    font: var(--typography-second-brand-name-desktop);
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: var(--space-l);
-}
-
-.inner-spacer, .spacer {
-    padding: 0 var(--space-centred);
-}
-
-.buttons-group {
-    width: 100%;
-}
-
-.button + .button {
-    margin-top: var(--space-xs);
-}
-
-.philosophy h2 {
-    font: var(--typography-h1-mobile);
-    max-width: 600px;
-}
-
-.philosophy .second-brand-name {
-    font: var(--typography-second-brand-name);
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: var(--space-s);
-}
-
-#craft-content {
-    padding-top: var(--space-xl);
-}
-
-.maintenance-note {
-    color: var(--text-secondary);
-    text-align: center;
-    margin-top: var(--space-xs);
-}
-
-#complications-content {
-    padding-top: 350px;
-    padding-bottom: var(--space-l);
-    color: var(--text-inverse);
-    background-color: var(--Background-secondary);
-}
-
-#complications-heading {
-    font: var(--typography-h1-mobile);
-    padding-bottom: var(--space-xs);
-    max-width: 700px;
-}
-
-#horizontal-spec {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: var(--space-s);
-    width: 100vw;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    padding-left: var(--space-centred-second);
-}
-
-#horizontal-spec li {
-    width: 100%;
-    scroll-snap-align: center;
-}
-
-.spec-card {
-    width: calc(100vw - var(--space-centred-second) * 2);
-    max-width: 1324px;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: var(--space-s);
-}
-
-.spec-card img {
-    aspect-ratio: 8 / 6;
-    max-height: 600px;
-    min-width: 0;
-    max-width: 800px;
-    object-fit: cover;
-    display: block;
-    flex: 1 1 300px;
-    width: 100%;
-}
-
-.spec-content {
-    max-width: 500px;
-    flex: 1 1 300px;
-}
-
-
-#history-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-}
-
-.cover-size-img {
-    max-width: 1600px;
-    max-height: 700px;
-}
-
-.cover-size-img img {
-    max-width: 1600px;
-    max-height: 700px;
-    min-height: 600px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: top;
-    display: block;
-}
-
-.cover-size-img:after {
-    content: "";
-    position: absolute;
-    margin: 0 auto;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50%;
-    background: var(--gradiant-cover-size-img);
-}
-
-#history-content {
-    position: absolute;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1600px;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    padding: var(--space-l);
-    color: var(--text-inverse);
-}
-
-.null-spacer-for-mobile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: var(--space-xs);
-}
-
-
-.horizontal-list {
-    margin: 0;
-    padding: 0 var(--space-centred);
-    display: flex;
-    gap: var(--space-s);
-    width: 100%;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-}
-
-.horizontal-list > :first-child {
-    margin-left: auto;
-}
-
-.horizontal-list > :last-child {
-    margin-right: auto;
-}
-
-.watch-card {
-    width: calc(100vw - var(--space-s) - var(--space-centred));
-    max-width: 500px;
-    max-height: 600px;
-    height: 100%;
-    background: var(--gradiant-radial-card);
-    padding: var(--space-s);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: var(--card-radius);
-    scroll-snap-align: center;
-}
-
-.watch-card img {
-    max-width: 258px;
-    width: 100%;
-}
-
-.watch-content {
-    width: 100%;
-}
-
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: var(--space-button-padding-top);
-    width: 100%;
-    min-height: var(--button-min-height);
-    border-radius: var(--button-radius);
-    text-decoration: none;
-    padding: var(--space-button-padding-top) var(--space-s);
-}
-
-
-footer {
-    padding-top: var(--space-l);
-    background-color: var(--Background-secondary);
-    color: var(--text-inverse);
-}
-
-footer h3 {
-    font: var(--typography-subtitle);
-}
-
-.footer-button a {
-    margin: var(--space-xs) 0 var(--space-s);
-}
-
-#region-heading {
-    font: var(--typography-body-s);
-    margin-bottom: var(--space-xs);
-}
-
-#region-content {
-    display: flex;
-    align-items: center;
-    gap: var(--space-button-padding-top);
-    margin-bottom: var(--space-s);
-}
-
-#region-content a {
-    color: var(--text-inverse);
-    text-decoration: underline;
-}
-
-
-#more-footer h3 {
-    margin-bottom: var(--space-xs);
-}
-
-#informations {
-    position: relative;
-}
-
-
-.legal-notes-list {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-s);
-}
-
-.legal-notes-list a {
-    color: var(--text-inverse);
-    text-decoration: underline;
-}
-
-
-#legal-notice, #legal-privacy-small {
-    text-align: center;
-    display: block;
-    color: var(--text-secondary);
-}
-
-#legal-privacy-small strong {
-    font: var(--typography-body-bold);
-}
-
-
-#legal-privacy-small {
-    margin: var(--space-xs) 0 var(--space-xl);
-}
-
-
-#social-section ul {
-    margin: var(--space-xs) 0 var(--space-xl);
-}
-
-#legal-links {
-    margin: var(--space-xl) 0 var(--space-s);
-}
-
-#legal-links:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    transform: translateY(-24px);
-    height: 1px;
-    width: calc(100% - var(--space-s) * 2);
-    background-color: var(--text-secondary);
-}
-
-#legal-links a {
-    color: var(--text-inverse);
-    text-decoration: underline;
-}
-
-.inline-legal-list li, .inline-legal-list, #legal-links small {
-    display: inline;
-}
-
-#social-section ul {
-    display: flex;
-    flex-wrap: wrap;
-    gap: var(--space-xs);
-}
-
-#social-section ul {
-    margin: var(--space-xs) 0 var(--space-xl);
-}
-
-.back-link {
-    text-align: center;
-    margin: var(--space-xl) 0 var(--space-l);
-}
-
-
-/*TODO*/
-/*TYPO EM*/
-h1 {
-    font: var(--typography-h1-mobile);
-}
-
-h2, h3 {
-    font: var(--typography-h2-mobile);
-}
-
-.brand-name {
-    font: var(--typography-brand-name);
-    text-transform: uppercase;
-    color: var(--Text-illustration-header);
-    position: absolute;
-    top: var(--space-brand-name);
-}
-
-.spec-item dd strong {
-    font: var(--typography-h1);
-}
-
-.spec-item dd abbr {
-    font: var(--typography-h1-mobile);
-    text-decoration: none;
-}
-
-#history-content p {
-    font: var(--typography-subtitle);
-}
-
-
-.specs {
-    width: 100%;
-}
-
-.specs, .specs-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: var(--space-xl);
-    gap: var(--space-s);
-}
-
-.specs img {
-    width: 100%;
-    max-width: 650px;
-    height: auto;
-    object-fit: cover;
-    margin-top: var(--space-s);
-}
-
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: var(--space-xs);
-    /*width: 100%;*/
-    min-height: var(--button-min-height);
-    border-radius: var(--button-radius);
-    text-decoration: none;
-    padding: var(--space-button-padding-top) var(--space-s);
-}
+@import "base/reset.css";
+@import "base/typography.css";
+@import "base/variables.css";
+@import "utilities/helpers.css";
+@import "layout/header.css";
+@import "base/global.css";
+@import "components/buttons.css";
+@import "components/cards.css";
+@import "components/listes.css";
+@import "components/medias.css";
+@import "layout/footer.css";
