--- a/src/css/base/global.css
+++ b/src/css/base/global.css
@@ -16,6 +16,10 @@
     padding: 0 var(--space-centred);
 }
 
+.second-spacer-desktop {
+    padding: 0 var(--space-centred-second);
+}
+
 body {
     background-color: var(--Background-primary);
     color: var(--text-primary);
@@ -30,36 +34,3 @@ a {
     text-decoration: none;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-xl);
-}
-
-
-#gradiant-header {
-    width: 16%;
-    min-width: 150px;
-    aspect-ratio: 320/449;
-    z-index: 1;
-}
-
-#gradiant-header:before {
-    content: "";
-    position: absolute;
-    top: 72px;
-    left: 0;
-    width: 100vw;
-    min-height: 220px;
-    aspect-ratio: 1920/449;
-    background: var(--gradiant-header);
-    z-index: -1;
-}
-
-#gradiant-header img {
-    margin-bottom: var(--space-xs);
-    width: 100%;
-    min-width: 150px;
-    aspect-ratio: 320/449;
-    object-fit: cover;
-}
