--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -12,7 +12,7 @@
         align-items: center;
         gap: var(--space-button-inner-padding);
         min-height: var(--button-min-height);
-        border-radius: var(--button-radius);
+        border-radius: var(--tiny-radius);
         text-decoration: none;
         padding: var(--space-button-group) var(--space-s);
     }
@@ -35,7 +35,7 @@
     width: 100%;
     gap: var(--space-xs);
     min-height: var(--button-min-height);
-    border-radius: var(--button-radius);
+    border-radius: var(--tiny-radius);
     text-decoration: none;
     padding: var(--space-button-group) var(--space-s);
 }
