--- a/src/css/components/cards.css
+++ b/src/css/components/cards.css
@@ -64,7 +64,7 @@
 }
 
 .philosophy-main-image {
-    border-radius: var(--card-radius);
+    border-radius: var(--large-radius);
     overflow: hidden;
     width: 100%;
     height: auto;
@@ -84,7 +84,7 @@
     max-width: 100vw;
     overflow: hidden;
     top: 24px;
-    border-radius: var(--card-radius);
+    border-radius: var(--large-radius);
     left: 0;
 }
 
@@ -96,7 +96,7 @@
     max-width: 100vw;
     overflow: hidden;
     bottom: -48px;
-    border-radius: var(--card-radius);
+    border-radius: var(--large-radius);
     right: 0;
 }
 .philosophy .second-brand-name {
@@ -180,7 +180,7 @@
     max-width: calc(100vw - var(--space-s) * 2);
     width: auto;
     object-fit: cover;
-    border-radius: var(--card-radius);
+    border-radius: var(--large-radius);
 
 }
 
@@ -196,7 +196,7 @@
     justify-content: flex-end;
     padding: var(--space-xs);
     background: var(--gradiant-card);
-    border-radius: var(--card-radius);
+    border-radius: var(--large-radius);
 }
 
 
@@ -212,7 +212,7 @@
     min-height: 480px;
     width: 100%;
     object-fit: cover;
-    border-radius: var(--card-radius);
+    border-radius: var(--large-radius);
 }
 
 .find-content {
@@ -226,7 +226,7 @@
     justify-content: flex-end;
     padding: var(--space-xs);
     background: var(--gradiant-card);
-    border-radius: var(--card-radius);
+    border-radius: var(--large-radius);
 }
 
 
@@ -336,7 +336,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    border-radius: var(--card-radius);
+    border-radius: var(--large-radius);
     scroll-snap-align: center;
 }
 
