--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,13 +1,13 @@
-@import "./base/reset";
-@import "./utils/variables";
-@import "./utils/mixins";
-@import "./base/base";
-@import "./base/typography";
+//@import "./base/reset";
+//@import "./utils/variables";
+//@import "./utils/mixins";
+//@import "./base/base";
+//@import "./base/typography";
 @import "./utils/helpers";
-@import "./components/buttons";
-@import "./components/cards";
+//@import "./components/buttons";
+//@import "./components/cards";
 @import "./layouts/header";
-@import "./layouts/horizontal-scroll";
-
-
-@import "./pages/home";
+//@import "./layouts/horizontal-scroll";
+//
+//
+//@import "./pages/home";
