--- a/src/sass/utils/_helpers.scss
+++ b/src/sass/utils/_helpers.scss
@@ -1,5 +1,5 @@
 /*SKIP LINKS*/
-.skip-links__link {
+.skip-link__anchor {
   position: absolute;
   top: -9999px;
   left: 50%;
@@ -11,4 +11,17 @@
   &:focus{
     top: 0; /* Apparaît quand on tab dessus */
   }
+}
+
+
+.u-visually-hidden{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
