avancement BEM line 98

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -2,8 +2,14 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-xl);
-  &__container{
+
+  &__container {
     @include wrapper;
 
   }
+}
+
+a {
+  color: $text-primary;
+  text-decoration: none;
 }
