--- a/src/sass/utils/_helpers.scss
+++ b/src/sass/utils/_helpers.scss
@@ -4,9 +4,9 @@
   top: -9999px;
   left: 50%;
   transform: translateX(-50%);
-  background: var(--Background-secondary);
-  color: var(--text-inverse);
-  padding: var(--space-s);
+  background: $background-secondary;
+  color: $text-inverse;
+  padding: $space-s;
   z-index: 9999;
   &:focus{
     top: 0; /* Apparaît quand on tab dessus */
