--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,35 +1,33 @@
-.main__wrapper__section-about__container-buttons {
-  &__button {
-    @include flex-center($direction: row, $gap: #{$space-button-inner-padding});
-    min-height: var(--button-min-height);
-    border-radius: var(--tiny-radius);
-    text-decoration: none;
-    padding: var(--space-button-group) var(--space-s);
-    cursor: pointer;
+.c-button {
+  @include flex-center($direction: row, $gap: #{inherit});
+  min-height: $button-min-height;
+  border-radius: $tiny-radius;
+  text-decoration: none;
+  padding: $space-button-group $space-s;
+  cursor: pointer;
 
-    &--primary {
-      @include btn-theme($background-secondary, $text-inverse, $text-primary);
-    }
+  &--primary {
+    @include btn-theme($background-secondary, $text-inverse, $text-primary);
+  }
 
-    &--secondary {
-      @include btn-theme(transparent, $text-primary, $background-secondary);
-    }
+  &--secondary {
+    @include btn-theme(transparent, $text-primary, $background-secondary);
+  }
 
-    &--inverse {
-      @include btn-theme(transparent, $text-inverse, $text-inverse);
-    }
+  &--inverse {
+    @include btn-theme(transparent, $text-inverse, $text-inverse);
+  }
 
-    &--primary-inverse {
-      @include btn-theme($background-primary, $text-primary, $background-secondary);
-    }
+  &--primary-inverse {
+    @include btn-theme($background-primary, $text-primary, $background-secondary);
+  }
 
-    &--social {
-      @extend .button--primary-inverse;
-      width: 56px;
-    }
+  &--primary-inverse-social {
+    @extend .c-button--primary-inverse;
+    width: 56px;
+  }
 
-    &__icon {
-      @include flex-center;
-    }
+  &__icon {
+    @include flex-center;
   }
 }
