--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   align-items: center;
   margin-top: 72px;
-  margin-bottom: var(--space-xs);
+  margin-bottom: $space-xs;
 
   &__brand {
     position: absolute;
-    top: var(--space-brand-name-to-header);
+    top: $space-brand-name-to-header;
   }
 
   &__visual {
@@ -24,30 +24,25 @@
       width: 100vw;
       min-height: 220px;
       aspect-ratio: 1920/449;
-      background: var(--gradiant-header);
+      background: $gradiant-header;
       z-index: -1;
-    }
-
-    &__image {
-      margin-bottom: var(--space-xs);
-      width: 100%;
-      min-width: 150px;
-      aspect-ratio: 320/449;
-      object-fit: cover;
     }
   }
 
-  .site-nav {
-    align-self: flex-start;
+  &__image {
+    margin-bottom: var(--space-xs);
     width: 100%;
-    padding-left: var(--space-s);
-    padding-right: var(--space-s);
+    min-width: 150px;
+    aspect-ratio: 320/449;
+    object-fit: cover;
+  }
 
+  .site-nav {
     &__list {
       display: flex;
       flex-direction: row;
       justify-content: center;
-      gap: var(--space-xs);
+      gap: $space-xs;
       overflow-x: auto;
     }
 
