--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,13 +1,14 @@
-//@import "./base/reset";
-//@import "./utils/variables";
-//@import "./utils/mixins";
-//@import "./base/base";
-//@import "./base/typography";
+@import "./base/reset";
+@import "./utils/variables";
+@import "./base/typography";
+@import "./utils/mixins";
 @import "./utils/helpers";
-//@import "./components/buttons";
+@import "./base/base";
+@import "./components/buttons";
 //@import "./components/cards";
+@import "./layouts/wrapper";
 @import "./layouts/header";
 //@import "./layouts/horizontal-scroll";
 //
 //
-//@import "./pages/home";
+@import "./pages/home";
